[package]
name = "leetcode-practice"
version = "0.1.0"
edition = "2021"

[dependencies]
ahash = "0.8.11"
chrono = "0.4.39"
dotenvy = "0.15.7"
fake = "3.1.0"
sqlx = { version = "0.8.3", features = ["postgres", "runtime-tokio-rustls"] }
tokio = { version = "1.0", features = ["full"] }

[dev-dependencies]
criterion = "0.5"

[[bench]]
name = "problems"
harness = false
